Fix vol faders alignment and build

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,7 +55,8 @@ input[type=range]::-moz-range-track {
 	& .slider {
 		width: 290px;
 		top: 55px;
-		left: -32px;
+		left: 50%;
+		margin-left: -145px;
     	position: relative;
 	}
 
